Fix alignment of proposal cards

--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -1,38 +1,11 @@
 // Cards
 // -------------------------------
 
-.ionic-logo {
-  display: block;
-  margin: 15px auto;
-  width: 96px;
-  height: 96px; }
-
-.pane {
-  /*      background-color: #333;*/ }
-
-.bar.bar-transparent {
-  background-color: transparent;
-  background-image: none;
-  border: none; }
-
-.bar .title {
-  color: #eee; }
-
-.swipe-cards {
-  position: fixed; }
-
 td-cards {
   display: block;
 }
 
 td-card {
-  // position: absolute;
-  // left: 50%;
-  // margin-top: 80px;
-  // margin-bottom: 40px;
-  // margin-left: -150px;
-  // width: 300px;
-  // height: 440px;
   position: absolute;
   left: 0;
   margin-top: 80px;
@@ -40,28 +13,9 @@ td-card {
   margin-left: 20px;
   width: calc(100% - 40px);
   height: 440px;
-
   box-shadow: 0px 1px 5px rgba(0,0,0,0.3);
   border-radius: 6px;
 }
-/*
-td-card.card-0 {
-  -webkit-transform: translate3d(0, 0px, 0);
-  transform: translate3d(0, 0px, 0);
-  top: 0px;
-  z-index: 10;
-}
-td-card.card-1 {
-  -webkit-transform: translate3d(0, 4px, 0);
-  transform: translate3d(0, 4px, 0);
-  z-index: 9;
-}
-td-card.card-2 {
-  -webkit-transform: translate3d(0, 8px, 0);
-  transform: translate3d(0, 8px, 0);
-  z-index: 8;
-}
-*/
 
 td-card .image {
   position: relative;
@@ -133,88 +87,24 @@ td-card img {
 #end-card.pop-in {
   -webkit-animation: bounceIn 0.4s ease-out; }
 
-// swipe-card {
-//   display: none;
-//   position: fixed;
-//   -webkit-transform: scale(1, 1);
-//   /*      left: 50%;*/
-//   left: 50%;
-//   /*      top: 50%;*/
-//   width: 300px;
-//   height: 300px;
-//   margin-left: -150px;
-//   margin-top: 35%;
-//   /*      margin-top: -150px;*/
-//   box-sizing: border-box;
-//   background-color: #CCC;
-//   border-radius: 4px;
-//   overflow: hidden;
-//   -webkit-animation-fill-mode: forwards; }
-
-// swipe-card {
-//   display: none;
-//   position: fixed;
-//   -webkit-transform: scale(1, 1);
-//   /*      left: 50%;*/
-//   /*      top: 50%;*/
-//   width: 100%;
-//   // margin-left: -150px;
-//   margin-top: calc(50% - 150px);
-//   /*      margin-top: -150px;*/
-//   box-sizing: border-box;
-//   background-color: $white;
-//   border-radius: 4px;
-//   overflow: hidden;
-//   -webkit-animation-fill-mode: forwards;
-//   @include box-shadow(0 2px 5px rgba(0, 0, 0, .3));}
-
-// swipe-card .title {
-//   height: 40px;
-//   padding: 5px;
-//   line-height: 30px;
-//   color: #444; }
-
-// swipe-card .image {
-//   overflow: hidden;
-//   max-height: 210px; }
-
-// swipe-card .button {
-//   border: none; }
-
-// swipe-card .image img {
-//   width: 100%;
-//   border-radius: 0px 0px 4px 4px; }
-
-// #start-card {
-//   color: #fff;
-//   background-color: $white;
-//   line-height: 300px;
-//   word-wrap: break-word;
-//   border: 6px solid $white;
-//   text-align: center; }
-
-// #start-card span {
-//   display: inline-block;
-//   line-height: 40px;
-//   width: 200px;
-//   font-size: 30px;
-//   vertical-align: middle; }
-
-// #footer .button {
-//   color: #fff; }
-
-// @-webkit-keyframes bounceIn {
-//   0% {
-//     -webkit-transform: scale(0, 0); }
-
-//   70% {
-//     -webkit-transform: scale(1.2, 1.2); }
-
-//   100% {
-//     -webkit-transform: scale(1, 1); } }
-
 td-card.pop-in-start {
   -webkit-transform: scale(0, 0); }
 
 td-card.pop-in {
   -webkit-animation: bounceIn 0.4s ease-out; }
+
+.proposal-below-300 {
+  display: none;
+}
+
+.proposal-above-300 {
+  display: block;
+}
+
+//simple max-width query
+@media screen and ( max-height: 600px ){
+  td-card:not(#end-card) {
+    height: 315px;
+
+  }
+}
